# ClipCutter

./: .gitattributes  .gitignore  CLAUDE.md  ClipCutter.bat  README.md  TESTING.md  pyproject.toml
.github/workflows/: test.yml
clipcutter/: __init__.py  __main__.py  audio.py  cli.py  clipper.py  compiler.py  config.py  detector.py  encoder.py  errors.py  features.py  metadata.py  models.py  pipeline.py  reviewer.py  state.py  web.py  youtube.py
clipcutter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clipcutter/routes/: _helpers.py  compile.py  encode.py  process.py  review.py  youtube.py
clipcutter/static/: index.html  package-lock.json  package.json  vite.config.ts
clipcutter/static/src/: api.ts  main.ts  tasks.ts  utils.ts  waveform.ts
docs/superpowers/plans/: 2026-04-04-clipcutter-todo.md  2026-04-06-todo2-features.md  2026-04-08-event-delegation-and-tests.md  2026-04-09-process-page-enhancements.md  2026-04-10-export-review-improvements.md  2026-04-11-export-ux-and-trim-quality.md  2026-05-17-review-fixes.md
docs/superpowers/specs/: 2026-04-04-clipcutter-todo-design.md  2026-04-06-todo2-features-design.md  2026-04-08-event-delegation-and-tests-design.md  (+3 more)
tests/: conftest.py  test_cancellation.py  test_cli.py  test_clipper.py  test_compilation.py  test_detector.py  test_export.py  test_features.py  test_lifecycle.py  test_metadata.py  test_process.py  test_review.py  test_route_helpers.py  test_subprocess_timeouts.py  test_ui_browser.py  test_waveform.py  test_youtube_cancel.py  test_youtube_oauth.py
(+6 files in other folders)
