[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clipcutter"
version = "0.1.0"
description = "Audio-based video highlight extractor"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
clipcutter = "clipcutter.cli:cli"
