[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clipcutter"
version = "0.1.0"
description = "Audio-based video highlight extractor"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
youtube = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]
dev = [
    "pytest>=7",
    "httpx>=0.24",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]

[project.scripts]
clipcutter = "clipcutter.cli:cli"
